<resources>
    <string name="app_name">CocktailMaster</string>

    <string name="exception_parse_json">Not type Json</string>

    <string name="text_some_drinks">Some Drinks</string>
    <string name="text_des_drink">%s-%s-%s</string>
    <string name="text_categories">Categories</string>
    <string name="text_ingredients">Ingredients</string>
    <string name="text_search_ingredients">Search ingredients…</string>
    <string name="text_instruction">Instruction</string>
    <string name="text_seeAll">See all ></string>
    <string name="text_gin">Gin</string>
    <string name="text_tequila">Tequila</string>
    <string name="text_vodka">Vodka</string>
    <string name="text_rum">Rum</string>
    <string name="text_original_drink">Ordinary Drink</string>
    <string name="text_cocktail">Cocktail</string>
    <string name="text_cocoa">Cocoa</string>
    <string name="text_alphabet">Browse drinks by first letter</string>
    <string name="text_empty">No data found!</string>
    <string name="text_filter_first_letter">Drinks start with %s</string>
    <string name="text_favourite">Favourite</string>
    <string name="text_connect">Connect</string>
    <string name="text_cancel">Cancel</string>
</resources>
