<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:ignore="contentDescription">

    <TextView
        android:id="@+id/textIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/text_ingredients"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSeeAllIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_10"
        android:padding="@dimen/dp_8"
        android:text="@string/text_seeAll"
        android:textColor="@color/color_olso_grey"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@id/textIngredients"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/textIngredients" />

    <LinearLayout
        android:id="@+id/linearVodka"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="@id/textIngredients"
        app:layout_constraintRight_toLeftOf="@id/linearGin"
        app:layout_constraintTop_toBottomOf="@id/textIngredients">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:scaleType="fitXY"
            android:src="@drawable/img_vodka" />

        <TextView
            android:id="@+id/textVodka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/text_vodka"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearGin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/linearVodka"
        app:layout_constraintLeft_toRightOf="@id/linearVodka"
        app:layout_constraintRight_toLeftOf="@id/linearRum"
        app:layout_constraintTop_toTopOf="@id/linearVodka">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:scaleType="fitXY"
            android:src="@drawable/img_gin" />

        <TextView
            android:id="@+id/textGin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/text_gin"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearRum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/linearGin"
        app:layout_constraintLeft_toRightOf="@id/linearGin"
        app:layout_constraintRight_toLeftOf="@id/linearTequila"
        app:layout_constraintTop_toTopOf="@id/linearGin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:scaleType="fitXY"
            android:src="@drawable/img_rum" />

        <TextView
            android:id="@+id/textRum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/text_rum"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearTequila"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/linearRum"
        app:layout_constraintLeft_toRightOf="@id/linearRum"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/linearRum">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:scaleType="fitXY"
            android:src="@drawable/img_tequila" />

        <TextView
            android:id="@+id/textTequila"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/text_tequila"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
